--- a/more.html
+++ b/more.html
@@ -39,18 +39,15 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto py-4 py-md-0 ">
                             <li class="nav-item active pl-4 pl-md-0 ml-0 ml-md-4 ">
-                                <a class="nav-link  " href="">Home</a>
+                                <a class="nav-link  " href="./">Home</a>
 
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="">App</a>
-                            </li>
-                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="">Movie</a>
-                            </li>
-                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link " href="">Game</a>
+                                <a class="nav-link " href="more.html?q=game">Game</a>
 
+                            </li>
+                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                <a class="nav-link" href="more.html?q=communication">communication</a>
                             </li>
 
                         </ul>
@@ -66,383 +63,69 @@
 <div class="container regtandle2">
 
     <img class="img-mobile" src="image/7.png">
-    <h2>Most Downloaded</h2>
+    <h2>More App</h2>
     <div class="searchbar-1">
+
         <div class="left">
-            <img class="search-icon" src="image/search-interface-symbol.png">
-            <input placeholder="search">
-            </input>
+
+
+            <img id="btn" class="search-icon" src="image/search-interface-symbol.png">
+            <input id="search" placeholder="search">
 
         </div>
+
         <div class="right">
-            <div class="custom-select">
-                <select>
-                    <option value="0">categort</option>
-                    <option value="1">art&design</option>
-                    <option value="2">movie</option>
-                </select>
-            </div>
+            <select id="slct" class="form-control" id="exampleFormControlSelect1">
+
+                <option value="0">Choose Category</option>
+            </select>
         </div>
 
     </div>
-</div>
 
-<section class="container ">
-    <div class="sec3">
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
 
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
+</div></div>
 
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
+<section id="result" class="container "></section>
 
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
 
+<footer>
+    <p class="title-footer">Phoneix</p>
+    <div class="container">
+        <div class="row">
+            <div class="col1 col-lg-4">
+                <i class="las la-phone"></i>
+                <p>Call</p>
+                <p>091234566788</p>
+            </div>
+            <div class="col1 col-lg-4">
+                <i class="las la-envelope"></i>
+                <p>mail</p>
+                <p>ThePhoneix@yahoo.com</p>
+            </div>
+            <div class="col1 col-lg-4">
+                <i class="las la-map-marker"></i>
+                <p>Address</p>
+                <p>Iran,Semnan</p>
             </div>
         </div>
     </div>
-    <div class="sec3">
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="sec3">
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="card-1">
-            <div class="up">
-                <p class="app-name">Learn To Draw ... </p>
-            </div>
-            <div class="down">
-                <div class="left">
-                    <div class="up-1">
-                        <p class="downloads-c">10,000+</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Downloads</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="up-1 row">
-                        <i class="las la-star"></i>
-                        <p class="downloads-c">4.4</p>
-                    </div>
-                    <div class="down-1">
-                        <p class="downloads">Reviews</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
+    <div class=" marg1">
+        <div class="line"></div>
+        <i class="lab la-instagram"></i>
+        <i class="lab la-linkedin-in"></i>
+        <i class="lab la-twitter"></i>
+        <div class="line"></div>
     </div>
 
+    <p class="row justify-content-center marg2">copyright 2021</p>
+</footer>
 
-    <div class="pag">
-        <div class="pagination">
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="lib/owl/owl.carousel.min.js"></script>
+<script src="js/customSelect.js"></script>
+<script src="js/more.js"></script>
 
-            <a href="#">1</a>
-            <a class="active" href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">&raquo;</a>
-        </div>
-    </div>
-</section>
-    <footer>
-        <p class="title-footer">Phoneix</p>
-        <div class="container">
-            <div class="row">
-                <div class="col1 col-lg-4">
-                    <i class="las la-phone"></i>
-                    <p>Call</p>
-                    <p>091234566788</p>
-                </div>
-                <div class="col1 col-lg-4">
-                    <i class="las la-envelope"></i>
-                    <p>mail</p>
-                    <p>ThePhoneix@yahoo.com</p>
-                </div>
-                <div class="col1 col-lg-4">
-                    <i class="las la-map-marker"></i>
-                    <p>Address</p>
-                    <p>Iran,Semnan</p>
-                </div>
-            </div>
-        </div>
-        <div class=" marg1">
-            <div class="line"></div>
-            <i class="lab la-instagram"></i>
-            <i class="lab la-linkedin-in"></i>
-            <i class="lab la-twitter"></i>
-            <div class="line"></div>
-        </div>
-
-        <p class="row justify-content-center marg2">copyright 2020</p>
-    </footer>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="lib/owl/owl.carousel.min.js"></script>
-    <script src="js/customSelect.js"></script>
 
 </body>
